NIFI-14109 Reintroduced previous changes that were removed to handle merge conflicts.